Add arguments to model.sh